Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-11-03 Tim
 PATCH: [ 1589601 ] Add "ReDim" keyword to Visual Basic highlighter
  Src\editlib: basic.cpp

2006-11-01 Kimmo
 Add Expat version 2.0.0 to /Externals/expat (revision: 3749)
  New folder: /Externals/Expat
 Add SCEW version 0.4.0 to /Externals/scew (revision: 3750)
  New folder: /Externals/scew
 PATCH: [ 1587574 ] Convert project files code to use expat+SCEW
  Src: Merge.dsp ProjectFile.cpp ProjectFile.h
  Remove folder: Src/ExpatLib/*
 PATCH: [ 1588212 ] Add manifest file to resource file
  Src: Merge.rc
  Src/Languages/*: Merge*.rc
  Move files from Installer/InnoSetup: WinMerge.exe.manifest WinMergeU.exe.manifest
   to Src/res

2006-10-31 Kimmo
 PATCH: [ 1586869 ] Fix File Select -dialog modality (commit the file I missed in previous commit)
  Src/Common: PreferencesDlg.cpp

2006-10-30 Kimmo
 PATCH: [ 1586869 ] Fix File Select -dialog modality
  Src: DirCmpReportDlg.cpp FileFiltersDlg.cpp MainFrm.cpp Merge.cpp Merge.h
   MergeDoc.cpp PatchDlg.cpp ProjectFilePathsDlg.cpp PropRegistry.cpp PropVss.cpp
 PATCH: [ 1586892 ] Remove unused unknown.ico and code loading it
  Src: DirView.cpp Merge.rc resource.h
  Src/Languages/*: Merge*.rc
  Remove file: Src/Res: unknown.ico

2006-10-26 Gal
 BUG: [ 1418805 ] Menu colors incorrect with non-standard color scheme
  Src/: BCMenu.cpp

2006-10-24 Tim
 PATCH: [ 1584004 ] Delete "Toolbar.bmp"
  Src/res deleted file: Toolbar.bmp

2006-10-20 Kimmo
 Fix compile warnings (some of them 64-bit), remove unused variables and code, fix types
  Src: MainFrm.cpp
 Remove unused function, fix inproper pointer usage
  Src: FileFilterHelper.cpp
 Fix casting a pointer type to DWORD (not 64-bit compatible)
  Src: DirView.cpp DirView.h

2006-10-19 Kimmo
 PATCH: [ 1578419 ] Fix creating WinMerge folder to MyFolders always
  Src: MainFrm.cpp MainFrm.h