@@ -2,6 +2,10 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2006-11-03 Kimmo
+ PATCH: [ 1589427 ] Add back read-only handling for project files
+  Src: ProjectFile.cpp
+
 2006-11-03 Tim
  PATCH: [ 1589601 ] Add "ReDim" keyword to Visual Basic highlighter
   Src\editlib: basic.cpp
